--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,5 +7,6 @@ roles_path          = ./roles
 collections_path    = ./collections
 
 retry_files_enabled = False
+stdout_callback     = ansible.posix.debug
 
 verbosity           = 1
