Adds GPG-encrypted Ansible Vault password support
Enables secure decryption of the Ansible Vault password using a GPG-encrypted file and a helper script, improving credential management and reducing manual password entry.

Signed-off-by: Jared Hocutt <jaredhocutt@gmail.com>

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -9,4 +9,4 @@ collections_path    = ./collections
 retry_files_enabled = False
 stdout_callback     = ansible.posix.debug
 
-verbosity           = 1
+vault_password_file = vault/vault-open.sh
