Adds explicit commands for server and worker tasks
Specifies the execution commands for server and worker containers to ensure correct startup behavior.
Also reorders environment variable definitions for improved readability and consistency.

Signed-off-by: Jared Hocutt <jaredhocutt@gmail.com>

--- a/collections/ansible_collections/jaredhocutt/homelab/roles/authentik/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/authentik/tasks/main.yml
@@ -90,6 +90,7 @@
       - "{{ authentik_volume_media }}.volume:/media"
       - "{{ authentik_volume_templates }}.volume:/templates"
     publish: "{{ authentik_ports }}"
+    command: server
     quadlet_file_mode: "0600"
     quadlet_options: "{{ authentik_quadlet_options_base + authentik_quadlet_options }}"
     state: quadlet
@@ -106,6 +107,7 @@
       - "{{ authentik_volume_media }}.volume:/media"
       - "{{ authentik_volume_certs }}.volume:/certs"
       - "{{ authentik_volume_templates }}.volume:/templates"
+    command: worker
     quadlet_file_mode: "0600"
     quadlet_options: "{{ authentik_quadlet_options_base + authentik_quadlet_options }}"
     state: quadlet
