Adds app host configuration and secrets integration
Introduces host and group variable files with Bitwarden secrets lookups
to centralize configuration for multiple application deployments.
Expands playbook to automate installation and setup of various apps,
improving maintainability and security by managing sensitive data
through external secrets management.

Signed-off-by: Jared Hocutt <jaredhocutt@gmail.com>

--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -2,6 +2,9 @@ collections:
   - name: ansible.posix
     version: ">=2.0,<2.1"
 
+  - name: bitwarden.secrets
+    version: ">=1.0,<1.1"
+
   - name: community.crypto
     version: ">=3.0,<3.1"
 
