Add option to enable and start podman.socket
Signed-off-by: Jared Hocutt <jaredhocutt@gmail.com>

--- a/collections/ansible_collections/jaredhocutt/homelab/roles/podman/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/podman/tasks/main.yml
@@ -10,6 +10,15 @@
     state: present
   become: true
 
+- name: Enable and start podman socket
+  ansible.builtin.systemd:
+    name: podman.socket
+    state: started
+    enabled: true
+    daemon_reload: true
+  become: true
+  when: podman_enable_socket
+
 - name: Install podman firewalld reload
   ansible.builtin.copy:
     src: podman-firewalld-reload.sh
