--- a/inventory/host_vars/apps.yml
+++ b/inventory/host_vars/apps.yml
@@ -47,6 +47,13 @@ calibre_volume_media_options:
   - Options={{ global_volume_media_options }}
 
 ###############################################################################
+# changedetection
+###############################################################################
+
+changedetection_image_tag: "0.50.33"
+changedetection_browser_image_tag: "0.0.3"
+
+###############################################################################
 # healthchecks
 ###############################################################################
 
