--- a/inventory/host_vars/apps.yml
+++ b/inventory/host_vars/apps.yml
@@ -298,9 +298,9 @@ kickstart_users:
     gid: "{{ lookup('bitwarden.secrets.lookup', bws_uuid.kickstart_user_1_gid) }}"
     password: "{{ lookup('bitwarden.secrets.lookup', bws_uuid.kickstart_user_1_password_crypted) }}"
     authorized_keys:
-      - "{{ lookup('bitwarden.secrets.lookup', bws_uuid['ssh_authorized_key_1']) }}"
-      - "{{ lookup('bitwarden.secrets.lookup', bws_uuid['ssh_authorized_key_2']) }}"
-      - "{{ lookup('bitwarden.secrets.lookup', bws_uuid['ssh_authorized_key_3']) }}"
+      - "{{ lookup('bitwarden.secrets.lookup', bws_uuid.ssh_authorized_key_1) }}"
+      - "{{ lookup('bitwarden.secrets.lookup', bws_uuid.ssh_authorized_key_2) }}"
+      - "{{ lookup('bitwarden.secrets.lookup', bws_uuid.ssh_authorized_key_3) }}"
   - fullname: "{{ lookup('bitwarden.secrets.lookup', bws_uuid.kickstart_user_2_fullname) }}"
     username: "{{ lookup('bitwarden.secrets.lookup', bws_uuid.kickstart_user_2_username) }}"
     groups: "{{ lookup('bitwarden.secrets.lookup', bws_uuid.kickstart_user_2_groups) }}"
