Add server setup configuration for Linux hosts
Signed-off-by: Jared Hocutt <jaredhocutt@gmail.com>

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -8,3 +8,6 @@ all:
       ansible_host: "{{ router_ip_address }}"
     apps:
       ansible_host: "{{ apps_ip_address }}"
+linux:
+  hosts:
+    apps: {}
