--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -5,9 +5,9 @@ all:
     localhost:
       ansible_host: localhost
     router:
-      ansible_host: "{{ router_ip_address }}"
+      ansible_host: "{{ lookup('bitwarden.secrets.lookup', bws_uuid.ansible_host_router) }}"
     apps:
-      ansible_host: "{{ apps_ip_address }}"
+      ansible_host: "{{ lookup('bitwarden.secrets.lookup', bws_uuid.ansible_host_apps) }}"
 linux:
   hosts:
     apps: {}
