Add homarr role
Signed-off-by: Jared Hocutt <jaredhocutt@gmail.com>

--- a/inventory/host_vars/apps.yml
+++ b/inventory/host_vars/apps.yml
@@ -76,6 +76,12 @@ healthchecks_env_vars:
   - PUSHOVER_SUBSCRIPTION_URL="{{ lookup('bitwarden.secrets.lookup', bws_uuid.healthchecks_pushover_subscription_url) }}"
 
 ###############################################################################
+# homarr
+###############################################################################
+
+homarr_image_tag: v1.43.0
+
+###############################################################################
 # immich
 ###############################################################################
 
