--- a/playbooks/apps.yml
+++ b/playbooks/apps.yml
@@ -39,6 +39,11 @@
         name: jaredhocutt.homelab.healthchecks
       tags: [healthchecks]
 
+    - name: Install homarr
+      ansible.builtin.import_role:
+        name: jaredhocutt.homelab.homarr
+      tags: [homarr]
+
     - name: Install immich
       ansible.builtin.import_role:
         name: jaredhocutt.homelab.immich
