Add karakeep role
Signed-off-by: Jared Hocutt <jaredhocutt@gmail.com>

--- a/playbooks/apps.yml
+++ b/playbooks/apps.yml
@@ -49,6 +49,11 @@
         name: jaredhocutt.homelab.immich
       tags: [immich]
 
+    - name: Install karakeep
+      ansible.builtin.import_role:
+        name: jaredhocutt.homelab.karakeep
+      tags: [karakeep]
+
     - name: Install kometa
       ansible.builtin.import_role:
         name: jaredhocutt.homelab.kometa
