--- a/inventory/host_vars/apps.yml
+++ b/inventory/host_vars/apps.yml
@@ -93,6 +93,17 @@ immich_redis_image_tag: 8.1.3-bookworm
 immich_postgres_password: "{{ lookup('bitwarden.secrets.lookup', bws_uuid.immich_postgres_password) }}"
 
 ###############################################################################
+# karakeep
+###############################################################################
+
+karakeep_image_tag: "0.27.1"
+karakeep_chrome_image_tag: "124"
+karakeep_meilisearch_image_tag: v1.13.3
+
+karakeep_nextauth_secret: "{{ lookup('bitwarden.secrets.lookup', bws_uuid.karakeep_nextauth_secret) }}"
+karakeep_meilisearch_master_key: "{{ lookup('bitwarden.secrets.lookup', bws_uuid.karakeep_meilisearch_master_key) }}"
+
+###############################################################################
 # kometa
 ###############################################################################
 
