Update homarr configuration
Signed-off-by: Jared Hocutt <jaredhocutt@gmail.com>

--- a/inventory/host_vars/apps.yml
+++ b/inventory/host_vars/apps.yml
@@ -81,6 +81,8 @@ healthchecks_env_vars:
 
 homarr_image_tag: v1.43.0
 
+homarr_secret_encryption_key: "{{ lookup('bitwarden.secrets.lookup', bws_uuid.homarr_secret_encryption_key) }}"
+
 ###############################################################################
 # immich
 ###############################################################################
