Add flush_handlers to end of each role
Signed-off-by: Jared Hocutt <jaredhocutt@gmail.com>

--- a/collections/ansible_collections/jaredhocutt/homelab/roles/audiobookshelf/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/audiobookshelf/tasks/main.yml
@@ -50,3 +50,6 @@
     state: quadlet
   notify: Restart {{ audiobookshelf_name }}
   become: true
+
+- name: Flush handlers
+  ansible.builtin.meta: flush_handlers
