--- a/collections/ansible_collections/jaredhocutt/homelab/roles/authentik/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/authentik/tasks/main.yml
@@ -113,3 +113,6 @@
     state: quadlet
   notify: Restart worker for {{ authentik_name }}
   become: true
+
+- name: Flush handlers
+  ansible.builtin.meta: flush_handlers
