--- a/collections/ansible_collections/jaredhocutt/homelab/roles/calibre/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/calibre/tasks/main.yml
@@ -47,3 +47,6 @@
     state: quadlet
   notify: Restart {{ calibre_name }}
   become: true
+
+- name: Flush handlers
+  ansible.builtin.meta: flush_handlers
