--- a/collections/ansible_collections/jaredhocutt/homelab/roles/changedetection/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/changedetection/tasks/main.yml
@@ -65,3 +65,6 @@
     state: quadlet
   notify: Restart {{ changedetection_name }}
   become: true
+
+- name: Flush handlers
+  ansible.builtin.meta: flush_handlers
