--- a/collections/ansible_collections/jaredhocutt/homelab/roles/immich/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/immich/tasks/main.yml
@@ -109,3 +109,6 @@
     state: quadlet
   notify: Restart {{ immich_name }}
   become: true
+
+- name: Flush handlers
+  ansible.builtin.meta: flush_handlers
