--- a/collections/ansible_collections/jaredhocutt/homelab/roles/n8n/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/n8n/tasks/main.yml
@@ -67,3 +67,6 @@
     state: quadlet
   notify: Restart {{ n8n_name }}
   become: true
+
+- name: Flush handlers
+  ansible.builtin.meta: flush_handlers
