--- a/collections/ansible_collections/jaredhocutt/homelab/roles/paperless/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/paperless/tasks/main.yml
@@ -152,3 +152,6 @@
     state: quadlet
   notify: Restart ai for {{ paperless_name }}
   become: true
+
+- name: Flush handlers
+  ansible.builtin.meta: flush_handlers
