--- a/collections/ansible_collections/jaredhocutt/homelab/roles/stirling_pdf/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/stirling_pdf/tasks/main.yml
@@ -63,3 +63,6 @@
     state: quadlet
   notify: Restart {{ stirling_pdf_name }}
   become: true
+
+- name: Flush handlers
+  ansible.builtin.meta: flush_handlers
