--- a/collections/ansible_collections/jaredhocutt/homelab/roles/vault/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/vault/tasks/main.yml
@@ -131,3 +131,6 @@
     state: quadlet
   become: true
   notify: Restart {{ vault_name }}
+
+- name: Flush handlers
+  ansible.builtin.meta: flush_handlers
