--- a/collections/ansible_collections/jaredhocutt/homelab/roles/podman/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/podman/tasks/main.yml
@@ -37,3 +37,6 @@
     mode: "0644"
   notify: Restart podman-firewalld-reload
   become: true
+
+- name: Flush handlers
+  ansible.builtin.meta: flush_handlers
