--- a/collections/ansible_collections/jaredhocutt/homelab/roles/sonarr/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/sonarr/tasks/main.yml
@@ -50,3 +50,6 @@
     state: quadlet
   notify: Restart {{ sonarr_name }}
   become: true
+
+- name: Flush handlers
+  ansible.builtin.meta: flush_handlers
