--- a/collections/ansible_collections/jaredhocutt/homelab/roles/tautulli/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/tautulli/tasks/main.yml
@@ -44,3 +44,6 @@
     state: quadlet
   notify: Restart {{ tautulli_name }}
   become: true
+
+- name: Flush handlers
+  ansible.builtin.meta: flush_handlers
