--- a/collections/ansible_collections/jaredhocutt/homelab/roles/immich/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/immich/defaults/main.yml
@@ -9,7 +9,7 @@ immich_machine_learning_image: ghcr.io/immich-app/immich-machine-learning
 immich_machine_learning_image_tag: release
 immich_postgres_image: ghcr.io/immich-app/postgres
 immich_postgres_image_tag: 14-vectorchord0.4.3-pgvectors0.2.0
-immich_redis_image: docker.io/valkey/valkey:8-bookworm
+immich_redis_image: docker.io/valkey/valkey
 immich_redis_image_tag: 8-bookworm
 
 immich_volume_data: "{{ immich_name }}-data"
