Updates service names in immich handler
Updates the systemd service names in the immich role handler to reflect the new service naming scheme.
This ensures that the handlers correctly restart the immich services.

--- a/collections/ansible_collections/jaredhocutt/homelab/roles/immich/handlers/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/immich/handlers/main.yml
@@ -1,17 +1,17 @@
 ---
 # handlers file for jaredhocutt.homelab.immich
 
-- name: Restart server for {{ immich_name }}
+- name: Restart {{ immich_name }}
   ansible.builtin.systemd:
-    name: "{{ immich_name }}-server.service"
+    name: "{{ immich_name }}.service"
     state: restarted
     enabled: true
     daemon_reload: true
   become: true
 
-- name: Restart worker for {{ immich_name }}
+- name: Restart machine_learning for {{ immich_name }}
   ansible.builtin.systemd:
-    name: "{{ immich_name }}-worker.service"
+    name: "{{ immich_name }}-machine-learning.service"
     state: restarted
     enabled: true
     daemon_reload: true
