Updates download volume mounts
Corrects the volume mount for downloads in Radarr, Sonarr, and SABnzbd.
It was previously incorrectly referencing a metadata volume.

--- a/collections/ansible_collections/jaredhocutt/homelab/roles/radarr/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/radarr/tasks/main.yml
@@ -42,7 +42,7 @@
     env: "{{ radarr_env_vars_base | combine(radarr_env_vars, recursive=True) }}"
     volumes:
       - "{{ radarr_volume_config }}:/config"
-      - "{{ radarr_volume_metadata }}:/mnt/download"
+      - "{{ radarr_volume_download }}:/mnt/download"
       - "{{ radarr_volume_media }}:/mnt/media"
     publish: "{{ radarr_ports }}"
     quadlet_file_mode: "0600"
