Adds Paperless-ngx Postgres password

--- a/inventory/host_vars/apps.yml
+++ b/inventory/host_vars/apps.yml
@@ -170,6 +170,7 @@ paperless_volume_consume_options:
   - Options=soft,nfsvers=3,nolock
 
 paperless_url: "{{ lookup('bitwarden.secrets.lookup', bws_uuid.paperless_url) }}"
+paperless_postgres_password: "{{ lookup('bitwarden.secrets.lookup', bws_uuid.paperless_postgres_password) }}"
 paperless_task_workers: 4
 
 ###############################################################################
